[package]
name = "rco_bot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

serde = {version = "1",features = ["derive"]}
serde_json = "1"
serde_yaml = "0"

proc_qq = "0.1.19"
anyhow = "1"

tokio = { version = "1", features = ["full"] }

log = "0"
tracing = "0.1"
tracing-subscriber = "0.3"

rbs = { version = "0.1"}
rbatis = { version = "4.0"}
rbdc-sqlite = { version = "0.1" }

once_cell = "1"

regex = "1"
chrono = "0"
reqwest = {version = "0", features = ["json"]}
hex = "0"
rand = {version = "0", features = ["std_rng"]}

async-trait = "0"
#图片处理
image = "0.24.5"
og_image_writer = "0.11.0"

#浏览器截图,暂时未使用
thirtyfour = "0"

# ett api
etternaonline_api = {version = "0.2.0", features = ["serde"]}

#osu api
rosu-v2 = "0.6.2"