[package]
name = "rco_bot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#大多库使用proc_qq重导出的库
serde = { version = "1", features = ["derive"] }
serde_yaml = "0"
tracing-subscriber = { version = "0", features = ["time", "env-filter", "fmt"] }
time = { version = "0.3", features = ["macros"] }
proc_qq = { git = "https://github.com/rcoplo/rust_proc_qq" }

rbs = { version = "4.3" }
rbatis = { version = "4.3" }
rbdc-sqlite = { version = "4.3" }

once_cell = "1"

regex = "1"
chrono = { version = "0", features = ["serde"] }
reqwest = { version = "0", features = ["json"] }
rand = "0.8.5"
#图片
og_image_writer = "0.11.0"
# apex api
apex_legends_api = "0.1.5"
# ett api
etternaonline_api = { version = "0.2.0", features = ["serde"] }

#osu api
rosu-v2 = "0.6.2"

tokio-cron-scheduler = "0.9.4"
